remove sun packages